@@ -1,6 +1,7 @@
 == HEAD
 
 * #789 - Fix encoding collapsing not dealing with multiple encodings in 1 line (grosser)
+* #775 - avoid failed encodings / stop bad charsets early (grosser)
 
 == Version 2.6.3 - Mon Nov 3 23:53 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>
 
